fix scrollbar prescense

--- a/projects/radio-op/stylesheet.css
+++ b/projects/radio-op/stylesheet.css
@@ -5,3 +5,7 @@ body {
 div {
     border: 0;
 }
+
+canvis {
+    border: 0;
+}
